name:                honeycomb
version:             0.1.0.0
synopsis:            Initial project template from stack, using hspec and quickcheck
description:         Please see README.md
homepage:            https://github.com/connorlay/honeycomb
license:             BSD3
license-file:        LICENSE
author:              Connor Lay
maintainer:          connor.lay@me.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Data.Json
                     , Network.Apiary
                     , Search.DepthFirstSearch
                     , Data.ApiElement
  build-depends:       base >= 4.7 && < 5
                     , aeson >= 1.0
                     , wreq >= 0.4
                     , lens >= 4.0
                     , bytestring >= 0.10
                     , unordered-containers >= 0.2
                     , vector >= 0.11
                     , text >= 1.2
  default-language:    Haskell2010

executable honeycomb
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , honeycomb
                     , aeson >= 1.0
                     , wreq >= 0.4
                     , lens >= 4.0
                     , bytestring >= 0.10
                     , unordered-containers >= 0.2
                     , vector >= 0.11
                     , text >= 1.2
  default-language:    Haskell2010

test-suite honeycomb-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , honeycomb
                     , aeson >= 1.0
                     , wreq >= 0.4
                     , lens >= 4.0
                     , bytestring >= 0.10
                     , unordered-containers >= 0.2
                     , vector >= 0.11
                     , text >= 1.2
                     , hspec
                     , QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/connorlay/honeycomb
